<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="#9D9D9D">



<TextView
    android:id="@+id/textNotlar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="12dp"
    android:includeFontPadding="false"
    android:text="@string/anilarim"
    android:textColor="@color/black"
    android:textSize="40sp"
    app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:backgroundTint="#353535"
        android:id="@+id/layoutarama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_arama"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/textNotlar">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arama"
            app:tint="@color/white"/>

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:hint="@string/aniarama"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/anilarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"

        android:paddingBottom="12dp"


        app:layout_constraintTop_toBottomOf="@id/layoutarama"
        tools:layout_editor_absoluteX="1dp" />

    <ImageView
        android:id="@+id/imageAnaNotEkle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_add"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>